# saturating_cast

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust-cd.yml  rust-ci.yml
src/: lib.rs  saturate.rs
tests/: signed.rs  unsigned.rs
